[package]
name = "eleco-integrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "2.3.1"
config = "0.13.2"
env_logger = "0.9.2"
futures = "0.3.25"
futures-lite = "1.12.0"
lapin = { version = "2.1.1", features = ["native-tls"] }
log = "0.4.17"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.147"
serde-aux = "4.0.0"
tokio = { version = "1.21.2", features = ["macros"] }
tokio-amqp = "2.0.0"
